# kasimov-ttt-manip

kat_arduino/: setup.py
kat_board/: CMakeLists.txt  package.xml
kat_bringup/: CMakeLists.txt  package.xml
kat_bringup/config/open_manipulator_x/: hardware_controller_manager.yaml
kat_bringup/launch/: move_group_controller.launch.py  omx_gazebo.launch.py  open_manipulator_x.launch.py
kat_bringup/worlds/: empty_world.sdf
kat_control/: CMakeLists.txt  package.xml  setup.py
kat_control/config/open_manipulator_x/: hardware_controller_manager.yaml  positions.yaml
kat_control/kat_control/: computer_move_listener.py
kat_control/ros2_control/: open_manipulator_x.ros2_control.xacro
kat_description/: CMakeLists.txt  package.xml
kat_description/meshes/board/: board_assembled.stl  board_frame1.stl  board_plate.stl  board_with_marker.stl  board_with_marker_aligned.stl  o_maker.stl  x_marker.stl
kat_description/rviz/: open_manipulator.rviz
kat_description/urdf/assembled/: omx_board_assenbled.urdf
kat_description/urdf/board/: board_assembled.urdf  board_frame1.urdf  board_plate.urdf
kat_description/urdf/moveit_setup_assistant/: open_manipulator_x_moveit.urdf
kat_description/urdf/open_manipulator_x/: open_manipulator_x.urdf.xacro  open_manipulator_x_arm.urdf.xacro  open_manipulator_x_msa.urdf.xacro
kat_description/urdf_moveit/: open_manipulator_x_moveit.urdf  open_manipulator_x_moveit.urdf.xacro
kat_moveit_config/: .setup_assistant  package.xml
kat_moveit_config/config/: moveit.rviz  moveit_controllers.yaml  open_manipulator_x.srdf  open_manipulator_x.urdf.xacro
kat_moveit_config/launch/: move_group.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
kat_msgs/: CMakeLists.txt  package.xml
kat_msgs/msg/: BoardState.msg  GameResult.msg  GameStart.msg
kat_msgs/srv/: ExecuteMove.srv  PlanMove.srv
kat_sim/: CMakeLists.txt  package.xml
kat_sim/launch/: omx_board_gazebo.launch.py  open_manipulator_x_gazebo.launch.py
kat_tictactoe/: CMakeLists.txt  package.xml
kat_tictactoe/kat_tictactoe/: player_interface.py
kat_tictactoe/launch/: tictactoe.launch.py
kat_tictactoe/src/kat_tictactoe/: game_manager.py  player_interface.py  tictactoe_logic.py
open_manipulator_x/kat_arduino/: package.xml  setup.cfg
open_manipulator_x/kat_bringup/launch/: move_group_controller.launch.py  move_group_controller_gazebo.launch.py  moveit_gazebo_combined.launch.py  open_manipulator_x.launch.py
open_manipulator_x/kat_control/: setup.cfg
open_manipulator_x/kat_control/config/open_manipulator_x/: hardware_controller_manager.yaml  positions.yaml
open_manipulator_x/kat_control/kat_control/: computer_move_listener.py
open_manipulator_x/kat_control/launch/: computer_move_listener.launch.py
open_manipulator_x/kat_control/ros2_control/: open_manipulator_x.ros2_control.xacro
open_manipulator_x/kat_description/: CMakeLists.txt
open_manipulator_x/kat_description/meshes/board/: board.stl  board_assembled.stl  board_frame2.stl  o_marker.stl
open_manipulator_x/kat_description/urdf/board/: board_frame2.urdf  o_marker.urdf  x_marker.urdf
open_manipulator_x/kat_description/urdf/open_manipulator_x/: open_manipulator_x.urdf.xacro  open_manipulator_x_arm.urdf.xacro
open_manipulator_x/kat_moveit_config/: CMakeLists.txt
open_manipulator_x/kat_moveit_config/config/: joint_limits.yaml  open_manipulator_x.srdf  open_manipulator_x.urdf.xacro  ros2_controllers.yaml
open_manipulator_x/kat_moveit_config/launch/: demo.launch.py  moveit_rviz.launch.py  rsp.launch.py
open_manipulator_x/kat_sim/gazebo/open_manipulator_x/: open_manipulator_x.gazebo.xacro
open_manipulator_x/kat_sim/launch/: open_manipulator_x_gazebo.launch.py
open_manipulator_x/kat_tictactoe/: package.xml  setup.cfg  setup.py
open_manipulator_x/kat_tictactoe/kat_tictactoe/: game_manager.py  tictactoe_logic.py
open_manipulator_x_description/urdf/: open_manipulator_x.urdf.xacro  open_manipulator_x_robot.urdf.xacro
