cmake_minimum_required(VERSION 3.8)
project(kat_msgs)

find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(builtin_interfaces REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(std_msgs REQUIRED)

# 메시지/서비스 정의
rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/BoardState.msg"
  "srv/PlanMove.srv"
  "srv/ExecuteMove.srv"
  DEPENDENCIES builtin_interfaces geometry_msgs std_msgs
)

ament_export_dependencies(rosidl_default_runtime)

ament_package()
